--- a/src/server/delivery-group-standards/views/standard-3.njk
+++ b/src/server/delivery-group-standards/views/standard-3.njk
@@ -104,11 +104,11 @@
         <ol class="gem-c-contents-list__list">
           <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
             <span class="gem-c-contents-list__list-item-dash" aria-hidden="true"></span>
-            <a class="gem-c-contents-list__link govuk-link" href="#why-its-important">Why it's important</a>
+            <a class="gem-c-contents-list__link govuk-link" href="#why-this-matters">Why this matters</a>
           </li>
           <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
             <span class="gem-c-contents-list__list-item-dash" aria-hidden="true"></span>
-            <a class="gem-c-contents-list__link govuk-link" href="#how-it-is-measured">How it is measured</a>
+            <a class="gem-c-contents-list__link govuk-link" href="#how-we-measure">How we measure</a>
           </li>
           <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
             <span class="gem-c-contents-list__list-item-dash" aria-hidden="true"></span>
@@ -118,7 +118,7 @@
       </nav>
     </div>
     <div class="govuk-grid-column-two-thirds">
-      <h2 class="govuk-heading-l" id="why-its-important">Why it's important</h2>
+      <h2 class="govuk-heading-l" id="why-this-matters">Why this matters</h2>
       
       <p class="govuk-body">
         A clear roadmap helps delivery groups make better decisions and avoid conflicting priorities. Teams understand how their work contributes to bigger goals. This builds stakeholder confidence and motivates better performance.
@@ -128,7 +128,7 @@
         Without a roadmap, delivery groups react to immediate pressures rather than working towards strategic goals. This creates confusion, wastes resources and damages stakeholder trust.
       </p>
 
-      <h2 class="govuk-heading-l" id="how-it-is-measured">How it is measured</h2>
+      <h2 class="govuk-heading-l" id="how-we-measure">How we measure</h2>
       
       <p class="govuk-body">
         Each standard is measured using a RAG (Red, Amber, Green) rating system.
@@ -165,7 +165,7 @@
         <p class="govuk-body">
           A roadmap exists but lacks clear priorities or alignment to outcomes. Roadmaps change frequently without clear reasons.
         </p>
-        <h4 class="govuk-heading-s">Common issues:</h4>
+        <h4 class="govuk-heading-s">Common problems:</h4>
         <ul class="govuk-list govuk-list--bullet">
           <li>roadmap is high-level and lacks detail</li>
           <li>priorities are unclear or based on opinion rather than evidence</li>
@@ -185,7 +185,7 @@
         <p class="govuk-body">
           No roadmap exists. Change happens reactively in response to immediate pressures. There is limited visibility of future direction.
         </p>
-        <h4 class="govuk-heading-s">Indicators of this rating:</h4>
+        <h4 class="govuk-heading-s">Indicators:</h4>
         <ul class="govuk-list govuk-list--bullet">
           <li>no roadmap exists</li>
           <li>change happens reactively in response to immediate pressures</li>
