--- a/src/server/delivery-group-standards/views/standard-2.njk
+++ b/src/server/delivery-group-standards/views/standard-2.njk
@@ -104,11 +104,11 @@
         <ol class="gem-c-contents-list__list">
           <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
             <span class="gem-c-contents-list__list-item-dash" aria-hidden="true"></span>
-            <a class="gem-c-contents-list__link govuk-link" href="#why-its-important">Why it's important</a>
+            <a class="gem-c-contents-list__link govuk-link" href="#why-this-matters">Why this matters</a>
           </li>
           <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
             <span class="gem-c-contents-list__list-item-dash" aria-hidden="true"></span>
-            <a class="gem-c-contents-list__link govuk-link" href="#how-it-is-measured">How it is measured</a>
+            <a class="gem-c-contents-list__link govuk-link" href="#how-we-measure">How we measure</a>
           </li>
           <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
             <span class="gem-c-contents-list__list-item-dash" aria-hidden="true"></span>
@@ -118,13 +118,13 @@
       </nav>
     </div>
     <div class="govuk-grid-column-two-thirds">
-      <h2 class="govuk-heading-l" id="why-its-important">Why it's important</h2>
+      <h2 class="govuk-heading-l" id="why-this-matters">Why this matters</h2>
       
       <p class="govuk-body">
         Successful delivery groups know exactly what they're responsible for and how well it's performing. This visibility prevents services from being neglected, helps identify opportunities for improvement, and ensures resources are allocated where they'll have the most impact.
       </p>
 
-      <h2 class="govuk-heading-l" id="how-it-is-measured">How it is measured</h2>
+      <h2 class="govuk-heading-l" id="how-we-measure">How we measure</h2>
       
       <p class="govuk-body">
         Each standard is measured using a RAG (Red, Amber, Green) rating system.
@@ -165,7 +165,7 @@
           Some services or products are defined, but documentation is incomplete or ownership unclear. 
           The connection between services and intended outcomes is only partially articulated.
         </p>
-        <h4 class="govuk-heading-s">Common issues:</h4>
+        <h4 class="govuk-heading-s">Common problems:</h4>
         <ul class="govuk-list govuk-list--bullet">
           <li>Service inventory exists but is incomplete or out of date</li>
           <li>Ownership is unclear or disputed for some services</li>
@@ -187,7 +187,7 @@
           No coherent view of services or products. Operations are fragmented across projects or systems 
           without a unified service or product model. Ownership and accountability are unclear.
         </p>
-        <h4 class="govuk-heading-s">Indicators of this rating:</h4>
+        <h4 class="govuk-heading-s">Indicators:</h4>
         <ul class="govuk-list govuk-list--bullet">
           <li>No service inventory or map exists</li>
           <li>Different teams have different views of what services exist</li>
