--- a/src/server/delivery-group-standards/views/standard-2.njk
+++ b/src/server/delivery-group-standards/views/standard-2.njk
@@ -88,7 +88,7 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="app-page-header">
         <span class="govuk-caption-xl">Delivery Group Standards</span>
-        <h1 class="govuk-heading-xl">2. Maintain an up-to-date inventory of your products and services</h1>
+        <h1 class="govuk-heading-xl">2. Maintain an inventory of products and services</h1>
         <p class="govuk-body-l app-page-header__summary">
           Do you have a clear, up-to-date view of all your services, who owns them, and how they're performing?
         </p>
